Bug 497114 - New '+' icon image of new tab button has lower legibility. ui-r=faaborg

--- a/browser/themes/winstripe/browser/browser.css
+++ b/browser/themes/winstripe/browser/browser.css
@@ -1530,7 +1530,6 @@ tabpanels {
 }
 
 .tabs-newtab-button {
-  opacity: .8;
   list-style-image: url(chrome://browser/skin/tabbrowser/newtab.png);
   -moz-image-region: rect(0, 18px, 18px, 0);
 }
